objects/How_to__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <page>How_to_Template</page>
            <template>Page</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <page>How_to_Template</page>
            <template>Page</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <page>How_to_Template</page>
            <template>Page</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <page>How_to_Template</page>
            <template>Page</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>A brief set of steps indicating how to perform a specific task; multiple short sets can be included if each is preceded by a concise objective statement.</description>
    <fields>
        <fullName>Attachment_1__c</fullName>
        <description>A file referred to in the article</description>
        <inlineHelpText>Attach a file needed to complete instructions in the article, if applicable</inlineHelpText>
        <label>Attachment 1</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment_2__c</fullName>
        <description>A file referred to in the article</description>
        <inlineHelpText>Attach a file needed to complete instructions in the article, if applicable</inlineHelpText>
        <label>Attachment 2</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachments__c</fullName>
        <description>An attached file applicable to the article</description>
        <inlineHelpText>Attach a file, such as a job aid or form, referred to in the article, if applicable</inlineHelpText>
        <label>Attachments</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Case_topic__c</fullName>
        <label>Case topic</label>
        <picklist>
            <controllingField>Internal_or_Test_Center_case__c</controllingField>
            <picklistValues>
                <fullName>Accommodations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admissions/Check-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admissions/Check-In - Client admissions waiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate Inquiries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exam Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware - Admissions Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware - DVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware - PPC Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware - Workstation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Help/Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Help/Question - Call transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Help/Question - Help</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Help/Question - Project Time (off phone)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2 / Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2 / Manager - Site Task/Notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Password Reset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Notes - Pre-Activation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Notes - Privacy Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration/Appointment Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software - Non VTS software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software - VTS software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Center Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Center Quality - PVTC Report Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Center Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VSS - Exam Delivery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Category_Name__c</fullName>
        <label>Case category</label>
        <picklist>
            <controllingField>Case_topic__c</controllingField>
            <picklistValues>
                <fullName>Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acknowledge Notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adding/Removing Clients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add new user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admissions manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amplifier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Answer a Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Testing Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATS Notification/Request (1XXX)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backup Admissions Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biometric waivers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call center (list client in description)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate complaint about exam content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate ends exam early - no result</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate Error/Misconduct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate Error or Misconduct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change to private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change to public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chateau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat session</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Request to Override</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint of unprofessional treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete a task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consent and waiver form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Information_for_approver__c</fullName>
        <label>Information for approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <description>Additional content to display only for Pearson employees, such as first-level support</description>
        <inlineHelpText>Internal-only information about article content, intended for first-level support</inlineHelpText>
        <label>Internal Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Internal_or_Test_Center_case__c</fullName>
        <label>Internal or Test Center case</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Center</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Knowledge_Rendering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Knowledge Rendering</label>
        <referenceTo>Knowledge_Rendering__c</referenceTo>
        <relationshipLabel>How-tos</relationshipLabel>
        <relationshipName>How_tos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>More_Information_2__c</fullName>
        <label>More Information 2</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>More_Information_3__c</fullName>
        <label>More Information 3</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>More_information_1__c</fullName>
        <label>More information 1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>More_information__c</fullName>
        <description>Provides information about follow-on tasks, if applicable, and any  &apos;See&apos; and &apos;See also&apos; references</description>
        <inlineHelpText>Add any next steps related to the article&apos;s procedure and appropriate references</inlineHelpText>
        <label>More information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Overview_1__c</fullName>
        <label>Overview 1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Overview_2__c</fullName>
        <label>Overview 2</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Overview_3__c</fullName>
        <label>Overview 3</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Overview__c</fullName>
        <description>Provides an abstract of the article, clearly indicating its purpose and any prerequisites to the included procedure</description>
        <inlineHelpText>Summarize the article&apos;s purpose (what can a reader do by following the procedure?). Include a &quot;Before you begin&quot; section to list any prerequisite tasks or status.</inlineHelpText>
        <label>Overview</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Steps_1__c</fullName>
        <label>Steps 1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Steps_2__c</fullName>
        <label>Steps 2</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Steps_3__c</fullName>
        <label>Steps 3</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Steps__c</fullName>
        <description>States a goal or outcome followed by specific tasks for achieving it</description>
        <inlineHelpText>Provide clear, parallel steps for achieving the objective or multiple sets of related objectives/steps</inlineHelpText>
        <label>Steps</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <picklist>
            <picklistValues>
                <fullName>Topic 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Topic 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Topic 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>How-to</label>
    <pluralLabel>How-tos</pluralLabel>
</CustomObject>